--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="assets/js/vx-slider.js"></script>
-        <script>
+        <script src="assets/js/ri-app-page.js"></script>
+<!--    <script>
         jQuery(document).ready(function($){
             var slider = $.fn.vxSlider({
                 speed               : 1000,
@@ -25,13 +26,13 @@
                 detectHash          : true
             });
         });
-        </script>
+        </script> -->
     </head>
     <body>
         <div id="vx-slider">
-            <section class="vx-slider__slide vx-slider__slide--1"><div class="vx-slider__slide__bg"></div></section>
-            <section class="vx-slider__slide vx-slider__slide--2"><div class="vx-slider__slide__bg"></div></section>
-            <section class="vx-slider__slide vx-slider__slide--3"><div class="vx-slider__slide__bg"></div></section>
+            <section class="vx-slider__slide vx-slider__slide--1"><div data-ri-scroll="offset:100" class="vx-slider__slide__bg"></div></section>
+            <section class="vx-slider__slide vx-slider__slide--2"><div data-ri-scroll="offset:100" class="vx-slider__slide__bg"></div></section>
+            <section class="vx-slider__slide vx-slider__slide--3"><div data-ri-scroll="offset:100" class="vx-slider__slide__bg"></div></section>
         </div>
     </body>
 </html>
